PROJECT(LearnCPP)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
FILE(GLOB_RECURSE SRC_LIST LIST_DIRECTORIES false "./*.cpp" "./*.h")
#MESSAGE(${SRC_LIST})
INCLUDE_DIRECTORIES(.)
SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_C_COMPILER "C:/mingw_x86_64/bin/gcc.exe")
SET(CMAKE_CXX_COMPILER "C:/mingw_x86_64/bin/g++.exe")
SET(CMAKE_ECLIPSE_VERSION "4.6")
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "WS2_32.Lib")
